# hypr-analogue

./: README.md  design.md  flake.nix  main.py  pyproject.toml  shell.nix
.fresh/: windows.json
example/: hypr-analogue.toml
