[project]
name = "hypr-analogue"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "py-analogue-clock",
    "pygobject>=3.50",
    "pycairo>=1.26",
    "typer>=0.25.1",
]

[tool.uv.sources]
py-analogue-clock = { git = "https://github.com/miekmesserschmidt/py-analogue-clock" }
